# goto_chat

./: .gitignore  CMakeLists.txt  README.md  async_server.cpp  blocking_clientex.cpp  blocking_server_ex.cpp  chat_client.cpp  chat_message.hpp  chat_server.cpp  http_client.cpp  http_server.cpp  install_gtest.sh  list  list.txt  main.cpp  ws_client.cpp  ws_server.cpp
.github/workflows/: goto.yml
Uml/: front_uml.drawio
checker_lib/: CMakeLists.txt
checker_lib/headers/: Response.h  checker.h
checker_lib/sources/: checker.cpp
client_lib/: CMakeLists.txt
client_lib/builder/: targetBuilder.cpp  targetBuilder.h  targetbuilder.cpp
client_lib/client_net_module_lib/: CMakeLists.txt  client_net_module.cpp  client_net_module.h  server_address.h
client_lib/data/: data.cpp
client_lib/headers/: client.h  data.h  httpClient.h  json.hpp  structures.h
client_lib/httpClient/: client.cpp  client.h  httpClient.h
client_lib/message_lib/: CMakeLists.txt  message.cpp  message.h
client_lib/middleware_lib/: middleware.cpp  middleware.h
client_lib/parser_lib/: parser.cpp  parser.h
client_lib/request_lib/: request.h
client_lib/session_lib/: session.h
client_lib/sources/: client.cpp
client_lib/structures/: structures.h
client_net_module_lib/: CMakeLists.txt  client_net_module.cpp  client_net_module.h
database/: clearDB.sql  createDB.sql  createTables.sql  dropDB.sql  showAll.sql  testAdd.sql
doc/: chatCurl.txt  curl.txt
gmock/: FindGMock.cmake
internal/: CMakeLists.txt
internal/Acceptor/: Acceptor.cpp  Acceptor.h
internal/AuthDb/: AuthDb.cpp  AuthDb.h
internal/AuthDb/tests/: test_authDb.cpp
internal/ChatRoom/: ChatRoom.cpp  ChatRoom.h
internal/ChatRoom/tests/: reChatRoom.cpp  reChatRoom.h
internal/ChatRoomHandler/: ChatRoomHandler.cpp  ChatRoomHandler.h
internal/ChatRoomHandler/Response/: Response.h
internal/ChatRoomHandler/tests/: reChatRoomHandler.cpp  reChatRoomHandler.h
internal/Context/: Context.cpp  Context.h
internal/DBConenction/: DBConnection.cpp  DBConnection.h
internal/DBConenction/tests/: reDBConnection.h
internal/DBConnection/: DBConnection.h
internal/DBRepo/: DBConnection.cpp  DBRepo.cpp  DBRepo.h  PGConnection.cpp
internal/DBRepo/tests/: reDBConnection.cpp  reDBConnection.h  reDBRepo.cpp  reDBRepo.h  reDBobject.cpp  rePGConnection.cpp
internal/Handlers/: Handler.cpp  Handler.h
internal/Handlers/tests/: test_handlers.cpp
internal/Listener/: Listener.cpp  Listener.h
internal/Message/: Message.cpp  Message.h
internal/Message/tests/: reMessage.cpp  reMessage.h
internal/MessageQueue/: MessageQueue.cpp  MessageQueue.h
internal/MessageQueue/tests/: test_queue.cpp
internal/Middleware/: MiddleWare.cpp  MiddleWare.h
internal/Middleware/tests/: test_middle.cpp
internal/Request/: Request.cpp  Request.h
internal/RequestBuffer/: RequestBuffer.cpp  RequestBuffer.h
internal/Response/: Response.cpp  Response.h
internal/Router/: Router.cpp  Router.h
internal/Router/tests/: test_router.cpp
internal/Socket/: Socket.cpp  Socket.h
internal/User/: User.cpp  User.h
internal/UserRepo/: UserRepo.cpp  UserRepo.h
internal/UserRepo/tests/: test_userRepo.cpp
internal/UserSession/: UserSession.cpp  UserSession.h
internal/UserSession/tests/: test_userSession.cpp
internal/WebSocketServer/: WebSocketServer.cpp  WebSocketServer.h
internal/WebSocketServer/tests/: reWebSocketServer.cpp  reWebSocketServer.h
internal/httpBuffer/: httpBuffer.cpp  httpBuffer.h
internal/jsonParser/: jsonParser.cpp  jsonParser.h
internal/jsonParser/tests/: test_parser.cpp
message_lib/: CMakeLists.txt
rapidjson/: allocators.h  pointer.h
rapidjson/error/: en.h
rapidjson/internal/: regex.h
rapidjson/msinttypes/: inttypes.h  stdint.h
scripts/: clearDB.sh  install.sh  installDB.sh  installLibpq.sh  installPostgres.sh  showDB.sh  startDB.sh
server/: Server.cpp  Server.h
server/tests/: test_server.cpp
source/: ChatRoom.h  ChatRoomHandler.cpp  ChatRoomHandler.h  DBConnection.h  DBRepo.cpp  DBRepo.h
stateMachine/: stateMachine.cpp  stateMachine.h
static/: UML_Diagram.drawio
test/: CMakeLists.txt  tests.cpp
tests/: CMakeLists.txt  reChatRoom.h  tests.cpp
ui/: CMakeLists.txt  main.cpp
ui/graphic/: app_window.ui  find_chat_window.ui  login_window.ui  reg_window.ui
ui/headers/: app_window.h  find_chat_window.h  login_window.h  recorder.cpp  recorder.h  reg_window.h
ui/sources/: app_window.cpp  find_chat_window.cpp  login_window.cpp  recorder.cpp  reg_window.cpp
